Related: tdf#152266 add a remove all button
Change-Id: Ibf6b749089d2d6da71a9ce00779bce8886453856
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143833
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>

--- a/cui/uiconfig/ui/macroassignpage.ui
+++ b/cui/uiconfig/ui/macroassignpage.ui
@@ -181,6 +181,20 @@
                 <property name="position">2</property>
               </packing>
             </child>
+            <child>
+              <object class="GtkButton" id="deleteall">
+                <property name="label" translatable="yes" context="macroassignpage|deleteall">Remove _All</property>
+                <property name="visible">True</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+                <property name="use-underline">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">3</property>
+              </packing>
+            </child>
           </object>
         </child>
         <child type="label">
