--- a/cui/uiconfig/ui/menuassignpage.ui
+++ b/cui/uiconfig/ui/menuassignpage.ui
@@ -674,7 +674,7 @@
           </packing>
         </child>
         <child>
-          <object class="GtkButtonBox">
+          <object class="GtkButtonBox" id="customizebox">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <property name="margin-start">5</property>
@@ -762,7 +762,7 @@
         </child>
         <child>
           <!-- n-columns=1 n-rows=2 -->
-          <object class="GtkGrid" id="grid7">
+          <object class="GtkGrid" id="arrowgrid">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <property name="valign">center</property>
@@ -770,32 +770,20 @@
             <property name="margin-end">6</property>
             <property name="row-spacing">6</property>
             <child>
-              <!-- n-columns=1 n-rows=1 -->
-              <object class="GtkGrid">
+              <object class="GtkButton" id="add">
                 <property name="visible">True</property>
-                <property name="can-focus">False</property>
-                <property name="margin-bottom">5</property>
-                <child>
-                  <object class="GtkButton" id="add">
-                    <property name="visible">True</property>
-                    <property name="can-focus">True</property>
-                    <property name="receives-default">True</property>
-                    <property name="tooltip-text" translatable="yes" context="menuassignpage|add">Add item</property>
-                    <property name="halign">center</property>
-                    <property name="valign">start</property>
-                    <property name="margin-bottom">5</property>
-                    <property name="image">image3</property>
-                    <property name="always-show-image">True</property>
-                    <child internal-child="accessible">
-                      <object class="AtkObject" id="add-atkobject">
-                        <property name="AtkObject::accessible-description" translatable="yes" context="menuassignpage|extended_tip|add">Click on the right arrow button to select a function on the left display box and copy to the right display box. This will add the function to the selected menu.</property>
-                      </object>
-                    </child>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+                <property name="tooltip-text" translatable="yes" context="menuassignpage|add">Add item</property>
+                <property name="halign">center</property>
+                <property name="valign">start</property>
+                <property name="margin-bottom">10</property>
+                <property name="image">image3</property>
+                <property name="always-show-image">True</property>
+                <child internal-child="accessible">
+                  <object class="AtkObject" id="add-atkobject">
+                    <property name="AtkObject::accessible-description" translatable="yes" context="menuassignpage|extended_tip|add">Click on the right arrow button to select a function on the left display box and copy to the right display box. This will add the function to the selected menu.</property>
                   </object>
-                  <packing>
-                    <property name="left-attach">0</property>
-                    <property name="top-attach">0</property>
-                  </packing>
                 </child>
               </object>
               <packing>
@@ -804,32 +792,21 @@
               </packing>
             </child>
             <child>
-              <!-- n-columns=1 n-rows=1 -->
-              <object class="GtkGrid">
+              <object class="GtkButton" id="remove">
                 <property name="visible">True</property>
-                <property name="can-focus">False</property>
+                <property name="can-focus">True</property>
+                <property name="receives-default">True</property>
+                <property name="tooltip-text" translatable="yes" context="menuassignpage|remove">Remove item</property>
+                <property name="halign">center</property>
+                <property name="valign">end</property>
                 <property name="margin-top">5</property>
-                <child>
-                  <object class="GtkButton" id="remove">
-                    <property name="visible">True</property>
-                    <property name="can-focus">True</property>
-                    <property name="receives-default">True</property>
-                    <property name="tooltip-text" translatable="yes" context="menuassignpage|remove">Remove item</property>
-                    <property name="halign">center</property>
-                    <property name="valign">end</property>
-                    <property name="margin-bottom">5</property>
-                    <property name="image">image4</property>
-                    <property name="always-show-image">True</property>
-                    <child internal-child="accessible">
-                      <object class="AtkObject" id="remove-atkobject">
-                        <property name="AtkObject::accessible-description" translatable="yes" context="menuassignpage|extended_tip|remove">Click on the left arrow button to remove the selected command from the current menu.</property>
-                      </object>
-                    </child>
+                <property name="margin-bottom">5</property>
+                <property name="image">image4</property>
+                <property name="always-show-image">True</property>
+                <child internal-child="accessible">
+                  <object class="AtkObject" id="remove-atkobject">
+                    <property name="AtkObject::accessible-description" translatable="yes" context="menuassignpage|extended_tip|remove">Click on the left arrow button to remove the selected command from the current menu.</property>
                   </object>
-                  <packing>
-                    <property name="left-attach">0</property>
-                    <property name="top-attach">0</property>
-                  </packing>
                 </child>
               </object>
               <packing>
