Make extended tip more precise (after translator review)
Thanks to Tuomas Hietala.

Change-Id: I99d630d7e7086270ca76173c254cd282cbe81a5e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143915
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
Tested-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>

--- a/sc/uiconfig/scalc/ui/solverdlg.ui
+++ b/sc/uiconfig/scalc/ui/solverdlg.ui
@@ -57,7 +57,7 @@
                 <property name="use-underline">True</property>
                 <child internal-child="accessible">
                   <object class="AtkObject" id="options-atkobject">
-                    <property name="AtkObject::accessible-description" translatable="yes" context="solverdlg|extended_tip|options">Opens the Solver Options dialog.</property>
+                    <property name="AtkObject::accessible-description" translatable="yes" context="solverdlg|extended_tip|options">Opens the solver’s Options dialog.</property>
                   </object>
                 </child>
               </object>
