--- a/formula/uiconfig/ui/functionpage.ui
+++ b/formula/uiconfig/ui/functionpage.ui
@@ -42,7 +42,7 @@
         <property name="truncate-multiline">True</property>
         <child internal-child="accessible">
           <object class="AtkObject" id="search-atkobject">
-            <property name="AtkObject::accessible-description" translatable="yes" context="functionpage|extended_tip|search">Search for a part of the function name.</property>
+            <property name="AtkObject::accessible-description" translatable="yes" context="functionpage|extended_tip|search">Search for a function name. Also matches function descriptions.</property>
           </object>
         </child>
       </object>
