--- a/svx/uiconfig/ui/floatingareastyle.ui
+++ b/svx/uiconfig/ui/floatingareastyle.ui
@@ -49,8 +49,8 @@
         <child>
           <!-- n-columns=1 n-rows=2 -->
           <object class="GtkGrid" id="anglegrid">
-            <property name="visible">True</property>
             <property name="can-focus">False</property>
+            <property name="no-show-all">True</property>
             <property name="row-spacing">6</property>
             <child>
               <object class="GtkLabel" id="label1">
@@ -268,8 +268,8 @@
         <child>
           <!-- n-columns=2 n-rows=2 -->
           <object class="GtkGrid" id="centergrid">
-            <property name="visible">True</property>
             <property name="can-focus">False</property>
+            <property name="no-show-all">True</property>
             <property name="row-spacing">6</property>
             <property name="column-spacing">12</property>
             <child>
