--- a/android/source/res/layout/toolbar_bottom.xml
+++ b/android/source/res/layout/toolbar_bottom.xml
@@ -269,6 +269,27 @@
                                         android:paddingBottom="12dp"
                                         android:paddingTop="12dp"
                                         android:src="@drawable/ic_format_bullets" />
+
+                                    <ImageButton
+                                        android:id="@+id/button_increaseIndent"
+                                        android:layout_width="0dp"
+                                        android:layout_height="wrap_content"
+                                        android:layout_weight="0.25"
+                                        android:background="@drawable/image_button_background"
+                                        android:paddingBottom="12dp"
+                                        android:paddingTop="12dp"
+                                        android:src="@drawable/ic_incrementindent" />
+
+                                    <ImageButton
+                                        android:id="@+id/button_decreaseIndent"
+                                        android:layout_width="0dp"
+                                        android:layout_height="wrap_content"
+                                        android:layout_weight="0.25"
+                                        android:background="@drawable/image_button_background"
+                                        android:paddingBottom="12dp"
+                                        android:paddingTop="12dp"
+                                        android:src="@drawable/ic_decrementindent" />
+
                                 </LinearLayout>
 
                             </LinearLayout>
