android: Use PNG icons instead of vector image for compatibility
Convert the drawable resources added in

    commit 60c7a27a4639e96af0efb26420e40454d03db35a
    Date:   Fri Dec 23 23:20:26 2022 +0100

        android: Add buttons to increase/decrease indent

to use PNG images (PNG export of the SVG images used previously, using
Inkscape) instead of vector drawables, since devices with old API
versions apparently don't support these vector drawables.

Trying to open any doc in an x86 AVD with API version 16
would result in LO crashing with this exception in ADB log:

    E/AndroidRuntime( 2948): java.lang.RuntimeException: Unable to start activity ComponentInfo{org.libreoffice/org.libreoffice.LibreOfficeMainActivity}: android.view.InflateException: Binary XML file line #281: Error inflating class ImageButton
    E/AndroidRuntime( 2948):        at android.app.ActivityThread.performLaunchActivity(ActivityThread.java:2059)
    E/AndroidRuntime( 2948):        at android.app.ActivityThread.handleLaunchActivity(ActivityThread.java:2084)
    E/AndroidRuntime( 2948):        at android.app.ActivityThread.access$600(ActivityThread.java:130)
    E/AndroidRuntime( 2948):        at android.app.ActivityThread$H.handleMessage(ActivityThread.java:1195)
    E/AndroidRuntime( 2948):        at android.os.Handler.dispatchMessage(Handler.java:99)
    E/AndroidRuntime( 2948):        at android.os.Looper.loop(Looper.java:137)
    E/AndroidRuntime( 2948):        at android.app.ActivityThread.main(ActivityThread.java:4745)
    E/AndroidRuntime( 2948):        at java.lang.reflect.Method.invokeNative(Native Method)
    E/AndroidRuntime( 2948):        at java.lang.reflect.Method.invoke(Method.java:511)
    E/AndroidRuntime( 2948):        at com.android.internal.os.ZygoteInit$MethodAndArgsCaller.run(ZygoteInit.java:786)
    E/AndroidRuntime( 2948):        at com.android.internal.os.ZygoteInit.main(ZygoteInit.java:553)
    E/AndroidRuntime( 2948):        at dalvik.system.NativeStart.main(Native 

--- a/android/source/res/drawable/ic_decrementindent.xml
+++ b/android/source/res/drawable/ic_decrementindent.xml
@@ -1,9 +1,3 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:pathData="m3,3v2h26v-2zM10.5,9c-0.239,0.029 -0.362,0.145 -0.518,0.328l-6.615,5.896a1,1 0,0 1,-0.002 0.002l-0.002,0.002a1,1 0,0 0,-0.064 0.059c-0.001,0.001 -0.003,0.003 -0.004,0.004a1,1 0,0 0,-0.057 0.061c-0.002,0.002 -0.004,0.005 -0.006,0.008a1,1 0,0 0,-0.049 0.063c-0.002,0.003 -0.004,0.005 -0.006,0.008a1,1 0,0 0,-0.041 0.066c-0.002,0.003 -0.002,0.007 -0.004,0.01a1,1 0,0 0,-0.037 0.068c-0.002,0.004 -0.004,0.008 -0.006,0.012a1,1 0,0 0,-0.018 0.043,1 1,0 0,0 -0.021,0.061 1,1 0,0 0,-0.016 0.049c-0.001,0.004 -0.001,0.008 -0.002,0.012 -0.006,0.023 -0.011,0.046 -0.016,0.07a1,1 0,0 0,-0.002 0.004c-0.004,0.024 -0.007,0.049 -0.01,0.074a1,1 0,0 0,-0.006 0.102c-0,0.178 0.048,0.35 0.135,0.5 0.059,0.102 0.135,0.195 0.229,0.271l0.002,0.002 0.002,0.002 6.615,5.896c0.156,0.183 0.279,0.299 0.518,0.328h1.5v-7,-7zM14,9v2h15v-2zM14,15v2h15v-2zM14,21v2h15v-2zM3,27v2h20v-2z"
-      android:fillColor="#2e3436"/>
-</vector>
+<bitmap xmlns:android="http://schemas.android.com/apk/res/android"
+    android:src="@drawable/decrementindent"
+    android:tint="@color/toolbar_foreground"/>
