tdf#151065 Improve extended tip about bibliography
Change-Id: Ib712e9fed6ee81f3afdffbabcb3e05bd0ef72bd3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144808
Tested-by: Jenkins
Reviewed-by: Vernon, Stuart Foote <vsfoote@libreoffice.org>
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>

--- a/sw/uiconfig/swriter/ui/tocindexpage.ui
+++ b/sw/uiconfig/swriter/ui/tocindexpage.ui
@@ -877,7 +877,7 @@
                     </items>
                     <child internal-child="accessible">
                       <object class="AtkObject" id="brackets-atkobject">
-                        <property name="AtkObject::accessible-description" translatable="yes" context="tocindexpage|extended_tip|brackets">Select the brackets that you want to enclose bibliography entries.</property>
+                        <property name="AtkObject::accessible-description" translatable="yes" context="tocindexpage|extended_tip|brackets">Select the brackets used to enclose bibliography entries.</property>
                       </object>
                     </child>
                   </object>
