--- a/sfx2/uiconfig/ui/stylecontextmenu.ui
+++ b/sfx2/uiconfig/ui/stylecontextmenu.ui
@@ -17,7 +17,7 @@
       <object class="GtkMenuItem" id="edit">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="label" translatable="yes" context="stylecontextmenu|edit">Modify...</property>
+        <property name="label" translatable="yes" context="stylecontextmenu|edit">Edit Style...</property>
         <property name="use_underline">True</property>
       </object>
     </child>
